Improve launcher reliability and downloads